syntax = "proto3";
// client and server will both use this

package hello;

// limits
enum EnConstLimits {
    EN_CL_UNKNOWN               = 0;
    EN_CL_MAX_PROTOCOL_LENGTH   = 65536; // message length limit: 64K
    EN_CL_MAX_OPEN_ID_LENGTH    = 64;    // openid length limit
    EN_CL_MAX_AUTH_TOKEN_LENGHT = 128;   // token length limit
}

// Platform type
enum EnPlatformTypeID {
    EN_PTI_ACCOUNT = 0; // inner: username/password
}

// channel id
enum EnPlatformChannelID {
    EN_PCI_NONE             = 0; // NONE
    EN_PCI_APPLE_GAMECENTER = 1; // 苹果GAMECENTER渠道
}

// system type
enum EnSystemID {
    EN_OS_WINDOWS    = 0;
    EN_OS_LINUX      = 1;
    EN_OS_MAC        = 2;
    EN_OS_ANDROID    = 3;
    EN_OS_IPHONE     = 4;
    EN_OS_IPAD       = 5;
    EN_OS_BLACKBERRY = 6;
    EN_OS_NACL       = 7;
    EN_OS_EMSCRIPTEN = 8;
    EN_OS_TIZEN      = 9;
    EN_OS_WINRT      = 10;
    EN_OS_WP8        = 11;

    /*EN_SYS_UNKNOWN  = 0;*/
    /*EN_SYS_IOS      = 1;*/
    /*EN_SYS_ANDROID  = 2;*/
    /*EN_SYS_WINDOWS  = 3;    // windows版本 会忽略登录钻石拉取*/
}

// update type
enum EnUpdateType {
    EN_UPDATE_NONE          = 0;    // no upgrade
    EN_UPDATE_INVALID       = -1;   // error parameters
    EN_UPDATE_DEFAULT_RECOM = 1;    // recommand resource upgrade
    EN_UPDATE_PACKAGE_RECOM = 2;    // recommand package upgrade
    EN_UPDATE_FORCE_START   = 1024; // force upgrade bound
    EN_UPDATE_DEFAULT_FORCE = 1025; // force resource upgrade
    EN_UPDATE_PACKAGE_FORCE = 1026; // force package upgrade
}

// user type
enum EnVersionType {
    EN_VERSION_DEFAULT = 0; // default
    EN_VERSION_GRAY    = 1; // gray
    EN_VERSION_REVIEW  = 2; // review

    EN_VERSION_INNER = 10000; // inner
    EN_VERSION_GM    = 10001; // gm
}

// db script type
enum EnDBScriptShaType {
    EN_DBSST_LOGIN  = 0; // login
    EN_DBSST_PLAYER = 1; // player
}

// chat channel type
enum EnChatChannelType {
    EN_CCT_INVALID          = 0;    // invalid
    EN_CCT_ALL_DEFAULT      = 1001; // all zones
    EN_CCT_ALL_BOUND        = 2000; // all zones bound
    EN_CCT_ZONE_DEFAULT     = 2001; // one zone
    EN_CCT_ZONE_BOUND       = 3000; // one zone bound
    EN_CCT_PERSONAL_DEFAULT = 3001; // personal
    EN_CCT_PERSONAL_BOUND   = 4000; // personal bound

    EN_CCT_SUB_GUILD = 8001; // subcribe-guild
}

// item change type
enum EnItemChgMainType {
    EN_ICMT_UNKNOWN = 0; // unknown
    EN_ICMT_USE     = 1; // use
    EN_ICMT_SALE    = 2; // sale
    EN_ICMT_BUY     = 3; // 使用资源
}

// item change sub type
enum EnItemChgSubType {
    EN_ICST_DEFAULT = 0; // default
}

// @see atframework/service/atgateway/protocols/proto_base.h
// @see atframe::gateway::close_reason_t
enum EnCloseReasonType {
    EN_CRT_UNKNOWN = 0;
    // 0x00 - 0x100 是atgateway内部的网络层可重连关闭原因
    // 0x10000 - 0x10100 是atgateway内部的网络层不可重连关闭原因

    // 0x20000 == 131072
    // 0x20000 - 0x30000 是自定义网络层不可重连，逻辑层可重连关闭原因
    EN_CRT_SESSION_NOT_FOUND = 131073; // session不存在
    EN_CRT_SPEED_WARNING     = 131074; // 游戏速度异常

    // 0x30000 == 196608
    // 0x30000 - 0x40000 是自定义网络层不可重连，逻辑层不可重连关闭原因
    EN_CRT_LOGIN_BAN = 196609; // 封号
}

// error code
enum EnErrorCode {
    EN_SUCCESS               = 0;
    EN_ERR_UNKNOWN           = -1;
    EN_ERR_TIMEOUT           = -101; // 超时
    EN_ERR_INVALID_PARAM     = -102; // 参数错误
    EN_ERR_CANT_AFFORD       = -103; // 买不起
    EN_ERR_NOT_LOGIN         = -104; // 没有登录
    EN_ERR_NOT_GM            = -105; // 没有GM权限
    EN_ERR_SYSTEM            = -106; // 服务器系统错误
    EN_ERR_USER_NOT_FOUND    = -107; // 没有找到这个玩家
    EN_ERR_REWARD_RECEIVED   = -108; // 这个奖励已经领取
    EN_ERR_NOT_FOUND_UUID    = -109; // uuid没有找到
    EN_ERR_MANUAL_DISCONNECT = -110; // 主动断开连接
    EN_ERR_LOST_CONNECTION   = -111; // 丢失网络连接
    EN_ERR_CONNECT_FAILED    = -112; // 无法连接到服务器
    EN_ERR_MAINTENANCE       = -113; // 服务器正在维护

    // openapi
    EN_ERR_OPENAPI_LIMIT          = -201; // openapi调用频率限制
    EN_ERR_OPENAPI_CGI_FAIL       = -202; // openapi内部cgi错误
    EN_ERR_OPENAPI_CALL_FAIL      = -203; // openapi内部调用错误
    EN_ERR_OPENAPI_PARSE_FAIL     = -204; // openapi调用解析失败
    EN_ERR_OPENAPI_PF_FAIL        = -205; // openapi调用pf无效
    EN_ERR_OPENAPI_PAY_TOKEN_FAIL = -206; // openapi pay token 失效
    EN_ERR_OPENAPI_PAY_MAINTAIN   = -207; // 支付服务器维护中，暂不可用

    EN_ERR_TEXT_HAS_DIRTY_WORD = -301; // 检测到脏字

    // 登录服务的返回错误码
    EN_ERR_LOGIN_BAN                  = -401; // 账号被临时封停
    EN_ERR_LOGIN_GM_LOCKED            = -402; // GM正在操作，请稍后再试
    EN_ERR_LOGIN_VERSION              = -403; // 版本错误或需要更新
    EN_ERR_LOGIN_PROTO_VERSION        = -404; // 协议版本错误
    EN_ERR_LOGIN_VERIFY               = -405; // 校验不通过
    EN_ERR_LOGIN_ALREADY_ONLINE       = -406; // 仍然在线且踢下线失败
    EN_ERR_LOGIN_INVALID_PLAT         = -407; // 平台不受支持
    EN_ERR_LOGIN_OTHER_DEVICE         = -408; // 在其他地方有登入
    EN_ERR_LOGIN_NOT_LOGINED          = -409; // 未登录
    EN_ERR_LOGIN_OPENID               = -410; // openid错误
    EN_ERR_LOGIN_SERVER_PENDING       = -411; // 游戏暂未开放
    EN_ERR_LOGIN_SPEED_WARNING        = -412; // 游戏速度异常，使用加速器会被封号一段时间
    EN_ERR_LOGIN_OPENID_NOT_FOUND     = -413; // openid未找到
    EN_ERR_LOGIN_DEVICEID_EMPTY       = -414; // device_id 为空
    EN_ERR_LOGIN_OPENID_NOT_MATCH     = -415; // 上传上来的openid不匹配
    EN_ERR_LOGIN_CREATE_PLAYER_FAILED = -416; // 创建用户失败
    EN_ERR_LOGIN_USERID_NOT_MATCH     = -417; // 用户ID不匹配

    // 注意错误码不能小于 -99999，便于区分服务器错误码和客户端错误码
}
